# werwolf_agent

./: .gitignore  Dockerfile  README.md  WHITE_AGENT_PROGRESS.md  auto_sabotage_test.py  config.yml  debug_routes.py  docs.md  elo_demonstration.py  eval_instructions.txt  integration.md  logic.txt  main.py  manipulation_test.py  populate_dummy_eval_jsons.py  populate_dummy_eval_stats.py  pyproject.toml  reset_eval_stats.py  run_manual_eval.py  test_eval_init.py  test_eval_logic.py  test_graph_generation.py  white_agent_guide.md
agentify-example/: setup.md
agentify-example/src/: launcher.py
results/werewolf/: full_game_v1.json  haoming-chen2006_20251223_051025.json
scripts/: send_demo_task_to_referee.py  trigger_ctrl_eval.py
src/: __init__.py  agent_config.py  launcher.py  litellm.py
src/green_agent/: agent.py  compat.py  green_controller.toml  tau_green_agent.toml  werewolf_green_agent.toml
src/my_util/: file_tools.py
src/werewolf/: __init__.py  agent_white.py  analysis.py  demo_script.py  elo_system.py  env_green.py  evaluation.py  game_manager.py  logging_manager.py  metrics.py  models.py  night_prompts.py  night_tools.py  persistence.py  rules.py  state.py
src/white_agent/: agent.py
web_interface/: app.py
web_interface/static/: index.css
werewolf-agent/: agentbeats.toml  agentbeats_white.toml  controller.py  inspect_schema.py  launch_white_agents.sh  pyproject.toml  requirements.txt  run.sh  run_white.sh  test_game_loop.py  test_integration.py
werewolf-agent/src/werewolf/: env_green.py  game_manager.py
werwolf_green_agent_clean/: main.py
(+7 files in other folders)
